--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "bootstrap-icons": "^1.11.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.5.6",
     "lucide-react": "^0.441.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.10",
     "react": "^18",
     "react-dom": "^18",
