--- a/package.json
+++ b/package.json
@@ -8,20 +8,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.7",
-    "@tabler/icons-react": "^3.17.0",
+    "@tabler/icons-react": "^3.29.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "bootstrap-icons": "^1.11.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.5.6",
+    "dotted-map": "^2.2.3",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.441.0",
     "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.0.5",
     "next": "^14.2.10",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
